tests/ui/parser/struct-field-numeric-shorthand.stderr
error: expected identifier, found `0`
  --> $DIR/struct-field-numeric-shorthand.rs:4:19
   |
LL |     let _ = Rgb { 0, 1, 2 };
   |             ---   ^ expected identifier
   |             |
   |             while parsing this struct

error: expected identifier, found `1`
  --> $DIR/struct-field-numeric-shorthand.rs:4:22
   |
LL |     let _ = Rgb { 0, 1, 2 };
   |             ---      ^ expected identifier
   |             |
   |             while parsing this struct

error: expected identifier, found `2`
  --> $DIR/struct-field-numeric-shorthand.rs:4:25
   |
LL |     let _ = Rgb { 0, 1, 2 };
   |             ---         ^ expected identifier
   |             |
   |             while parsing this struct

error: aborting due to 3 previous errors

